<resources>
    <!--App names-->
    <string name="app_name">Warehouse Manager</string>
    <string name="app_name_local">Менеджер склада</string>

    <!--Button names-->
    <string name="supply_list_activity_button">Список позиций</string>
    <string name="log_book_activity_button">Журнал изменений</string>
    <string name="about_program_button">Информация</string>
    <string name="menu_button">Меню</string>
    <string name="back_button">Назад</string>
    <string name="edit_button">Изменить</string>
    <string name="apply_button">Подтвердить</string>
    <string name="create_button">Добавить</string>
    <string name="all_positions_button">Все позиции</string>
    <string name="delete_button">Удалить</string>
    <string name="update_button">Обновить</string>
    <string name="save_button">Сохранить</string>
    <string name="export_file_button">Выгрузить файл состояния</string>

    <!--Descriptions-->
    <string name="img_description_first">треугольник для отображения столбца сортировки</string>

    <!--Fields names-->
    <string name="item_activity_field">Просмотр позиции</string>
    <string name="title_field">Название:</string>
    <string name="date_field">Дата прихода:</string>
    <string name="start_amount_field">Приход:</string>
    <string name="rest_available_amount_field">Доступный остаток:</string>
    <string name="dispatches_field">Отгрузки</string>
    <string name="comment_field">Комментарий:</string>
    <string name="kg_units_field">кг</string>
    <string name="pieces_units_field">шт</string>
    <string name="contractor_field">Контрагент:</string>
    <string name="dispatch_date_field">Дата отгрузки:</string>
    <string name="amount_field">Количество:</string>
    <string name="background_color_field">Цвет фона:</string>
    <string name="consumable_material_field">Расходный материал</string>
    <string name="consumable_material_field_2">Расходный материал:</string>
    <string name="planed_dispatch_event_field">Запланированная отгрузка</string>
    <string name="rest_factual_amount_field">Фактический остаток:</string>
    <string name="final_product_text_field">Оборудование</string>
    <string name="consumable_material_text_field">Расходные материалы</string>
    <string name="amount_positions_in_app_field">Количество позиций в приложении:</string>
    <string name="available_final_rest_amount_field">Доступно товаров для продажи:</string>
    <string name="factual_final_rest_amount_field">Фактическое количество на складе:</string>
    <string name="available_consumable_rest_amount_field">Доступно товара для продажи:</string>
    <string name="factual_consumable_rest_amount_field">Фактическая масса на складе:</string>
    <string name="change_logs_field">Изменения</string>
    <string name="save_logs_field">Сохранения</string>
    <string name="items_list_title_column_field">Название</string>
    <string name="items_list_start_amount_column_field">Приход</string>
    <string name="items_list_rest_amount_column_field">Остаток</string>
    <string name="items_list_date_column_field">Дата</string>

    <!--Messages names-->
    <string name="yes_message">Да</string>
    <string name="no_message">Нет</string>
    <string name="create_item_message">Создание позиции</string>
    <string name="edit_item_message">Изменение позиции</string>
    <string name="show_item_message">Просмотр позиции</string>
    <string name="error_message">ERROR!Inform developer if possible!</string>
    <string name="enter_amount_message">Введите значение</string>
    <string name="enter_text_message">Введите текст</string>
    <string name="create_dispatch_event_message">Добавление отгрузки</string>
    <string name="change_dispatch_event_message">Изменение отгрузки</string>
    <string name="incorrect_amount_format_message">Некорректный формат данных в поле "Количество"</string>
    <string name="incorrect_start_amount_format_message">Некорректный формат данных в поле "Приход"</string>
    <string name="incorrect_item_date_format_message">Некорректный формат данных в поле "Дата прихода"</string>
    <string name="incorrect_dispatch_date_format_message">Некорректный формат данных в поле "Дата отгрузки"</string>
    <string name="incorrect_title_format_message">Некорректный формат данных в поле "Название"</string>
    <string name="incorrect_contractor_format_message">Некорректный формат данных в поле "Контрагент"</string>
    <string name="incorrect_comment_format_message">Некорректный формат данных в поле "Комментарий"</string>
    <string name="decline_dispatch_event_message">Чтобы добавить отгрузку создайте позицию"</string>
    <string name="Choose_supply_item_color_message">Выберите цвет заднего фона позиции</string>
    <string name="delete_supply_item_dialog_title_message">Подтвердите удаление позиции</string>
    <string name="load_external_state_file_title_message">Подтвердите следующее действие</string>
    <string name="delete_dispatch_event_dialog_title_message">Подтвердите удаление отгрузки</string>
    <string name="delete_dialog_message_message">Выберите соответствующее действие</string>
    <string name="load_external_state_file_message">После этого действия текущее состояние приложения будет безвозвратно удалено и заменено состоянием из внешнего файла. Вы уверены что хотите продолжить?</string>
    <string name="load_external_action_first_message">Подтвердить</string>
    <string name="delete_dialog_action_first_message">Удалить</string>
    <string name="delete_dialog_action_second_message">Отменить</string>
    <string name="save_warning_message">Не забудьте сохранить изменения!</string>
    <string name="save_not_required_message">Сохранение не требуется</string>
    <string name="input_field_message">Поле ввода</string>
    <string name="load_external_file_message">Загрузить состояние из файла</string>
    <string name="hint_information_info">Для отображения информации, выберите интересующий вас раздел выше</string>

    <!--Information-->
    <string name="information_activity_text">Приложение предназначено для упрощения ведения состояния склада. А именно - создания и изменения позиций склада и их отгрузок. Также предусмотрен журнал изменений позиций и сохранений состояния 	приложения.\n\n\nФункционал:\n\nВ приложении имеется 7 возможных экранов с информацией:\n\n1. Основной экран, \"Менеджер склада\":\nНа экране располагаются основные кнопки переходов, кнопка сохранения, кнопка выгрузки файла, кнопка меню и два окна отображающих информацию. При нажатии на кнопку меню можно выбрать действие для обоновления состояния приложения, по средствам загрузки состояния из ранее выгруженного файла. Два окна отображают суммарную информацию о складе. Также на экране присутствует надпись оповещающая о наличии не сохраненных изменений, и соответственно, необходимости сохранения.\n\n2. Второй экран, \"Список позиций\":\nНа экране располагаются кнопки перехода и создания позиции и основной список всех позиций. При нажатии на позицию осуществляется переход к ее просмотру, при нажатии на один из названий столбцов таблицы, таблица будет отсортирована по соответствующим данным.\n\n3. Третий экран, \"Журнал изменений\":\nНа экране присутствует кнопка возврата в меню, а также два списка: список сохранений и список изменений. Списки отображают актуальные изменения и сохранения в приложении, оба списка работают по принципу очереди и содержат по 50 записей, когда в верхушку списка помещается новое событие, нижнее удаляется.\n\n4. Четвертый экран, \"Информация\":\nЭкран является информационным и содержит информацию, которую вы читаете в данный момент.\n\n5. Пятый экран, \"Просмотр позиции\":\nНа экране присутствует кнопка возврата к листу позиций, кнопка изменения позиции и кнопка удаления позиции. Также на экране располагаются текстовые поля, содержащие информацию о позиции и список отгрузок по этой позиции.\n\n6. Шестой экран, \"Изменение или Создание позиции\":\nЭкран используется как для изменения, так и для создания позиции на складе. На экране присутствует кнопка возврата к просмотру позиции и кнопка подтверждения изменений. На экране вы можете задать необходимые информационные значения, добавить или изменить отгрузки товара, а также изменить задний фон отображения позиции склада в общем списке. У позиции есть два состояния - расходный материал или оборудование, относительно их подсчитывается суммарное состояние склада на основном экране.\n\n7. Седьмой экран, \"Изменение или Создание отгрузки\":\nЭкран используется как для изменения отгрузки, так и для ее создания. На экране присутствует кнопка возврата к изменяющейся позиции склада, кнопка подтверждения изменений и кнопка удаления отгрузки. Также на экране вы можете задать необходимые информационные значения. У отгрузки есть два состояния - отгруженное и запланированное, относительно их подсчитываются фактические и доступные остатки товаров на складе.\n\n\nВыгрузка/Загрузка состояния приложения:\n\nДля выгрузки состояния приложения в файл, достаточно нажать на кнопку \"Выгрузить файл состояния\", файл с названием \"warehouse_state_data.json\" можно забрать из директории по пути /Android/data/com.appksa.warehousemanager/files. Не следует изменять содержимое файла, если не уверены в правильности вносимых корректировок. Файл перезаписывается при каждой новой выгрузке из приложения, соответственно, может находиться исключительно в еденичном экземпляре по указанному пути. Для загрузки файла в приложение, перейдите по указанному выше пути, удалите устаревший файл (если не был удален заранее), поместите нужный вам файл состояния в еденичном экземпляре с указанным выше названием (обязательно) и загрузите его в приложении через действие из меню основного экрана.\n\n\nВыгрузка/Загрузка Exel-файла позиций склада:\n\nПринципы работы функции не отличаются от пердыдущего пункта, за небольшим исключением: название файла - \"warehouse_positions_data.xlsx\", а также при сохранении и загрузке exel файла игнорируются списки журнала изменений. Используйте exel файл только для добавления позиций в приложение.\nТакже необходимо следовать следующим правилам при редактировании файла:\n\n1. Первые Три строки файла являются информационными и их не следует реактировать, с 4 строки начинаются строки позиций и их отгрузок.\n\n2. Вы должны придерживаться следующего шаблона заполнения - если вам нужно добавить отгрузку, вам следует заполнить ячейки строки в соответствии с названиями столбцов позиции, далее при необходимости заполнять следующие строки отгрузками в соответствии с названиями столбцов отгрузки (первые две ячейки строки пропускаются, в случае стороки отгрузки). Не следует пропускать строки, все позиции и отгрузки идут сплошным списком.\n\n3. Типы ячеек и их содержимое:\n\nПозиция:   Ячейка \"Название\" должна иметь текстовый формат; \"Дата прихода\" - текстовый формат; \"Приход, кол-во\" - числовой формат; \"Расходник\" - текстовый формат, если является расходником устанавливается значение - \"+\", в противном случае установится тип не расходного материала; \"Id заднего фона\" - числовой формат, не редактируйте существующие ячейки и не вносите ничего в новые (ячейки содержат id ресурсов); \"Комментарий\" - текстовый формат.\n\nОтгрузки:   Ячейка \"Контрагент\" должна иметь текстовый формат; \"Дата отгрузки\" - текстовый формат; \"Количество\" - числовой формат; \"Запланированная\" - текстовый формат, если отгрузка является запланированной устанавливается значение - \"+\", в противном случае установится тип обычной (не запланированной) отгрузки;\n\nПосле загрузки файла, вы будете перенаправлены на страницу с текстом отчета, в котором можно ознакомиться с ошибками(Error:) и информационными сообщениями(Info:). В большинстве случаев, при допущении ошибки заполнения, вы сможете исправить соответствующую по информации из отчета.\n\n\nО программе:\n\nПриложение написано в рамках обучения программирования под платформу Android, с целью помочь семейному бизнесу, Март 2023г.\n\nРазработчик: Кирилл Андреевич Сехович.</string>
</resources>