<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateChangeSupplyItemActivity">

    <EditText
        android:id="@+id/edit_text_create_disp_event_amount"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:hint="@string/enter_amount_message"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_create_dispatch_3"
        app:layout_constraintStart_toEndOf="@+id/text_view_create_dispatch_3"
        app:layout_constraintTop_toTopOf="@+id/text_view_create_dispatch_3" />

    <TextView
        android:id="@+id/text_view_create_dispatch_1"
        android:layout_width="80dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:text="@string/title_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/text_view_create_dispatch_2"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/date_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_create_dispatch_1" />

    <EditText
        android:id="@+id/edit_text_create_disp_event_contractor"
        android:layout_width="280dp"
        android:layout_height="60dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="15dp"
        android:hint="@string/enter_text_message"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_create_dispatch_1"
        app:layout_constraintStart_toEndOf="@+id/text_view_create_dispatch_1"
        app:layout_constraintTop_toTopOf="@+id/text_view_create_dispatch_1" />

    <EditText
        android:id="@+id/edit_text_create_disp_event_date"
        android:layout_width="150dp"
        android:layout_height="37dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="7dp"
        android:hint="@string/enter_text_message"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/text_view_create_dispatch_2"
        app:layout_constraintStart_toEndOf="@+id/text_view_create_dispatch_2"
        app:layout_constraintTop_toTopOf="@+id/text_view_create_dispatch_2" />

    <TextView
        android:id="@+id/text_view_create_dispatch_3"
        android:layout_width="100dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="25dp"
        android:text="@string/start_amount_field"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_create_dispatch_2" />

    <TextView
        android:id="@+id/textView15"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="15dp"
        android:text="@string/dispatches_field"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/recycler_edit_dispatch_events"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/text_view_create_dispatch_4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="5dp"
        android:text="@string/kg_field"
        app:layout_constraintBottom_toBottomOf="@+id/edit_text_create_disp_event_amount"
        app:layout_constraintStart_toEndOf="@+id/edit_text_create_disp_event_amount"
        app:layout_constraintTop_toTopOf="@+id/edit_text_create_disp_event_amount" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_edit_dispatch_events"
        android:layout_width="wrap_content"
        android:layout_height="130dp"
        android:layout_marginStart="7dp"
        android:layout_marginBottom="15dp"
        app:layout_constraintBottom_toTopOf="@+id/button9"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="50dp"
        android:text="@string/comment_field"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/text_view_create_dispatch_3" />

    <EditText
        android:id="@+id/edit_text_comment"
        android:layout_width="370dp"
        android:layout_height="90dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:hint="@string/enter_text_message"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView18" />

    <Button
        android:id="@+id/button12"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="1dp"
        android:onClick="onAddDispatchEventClick"
        android:text="@string/create_button"
        android:textSize="10sp"
        app:layout_constraintBottom_toBottomOf="@+id/textView15"
        app:layout_constraintStart_toEndOf="@+id/textView15"
        app:layout_constraintTop_toTopOf="@+id/textView15"
        tools:ignore="SmallSp" />

    <Button
        android:id="@+id/button9"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        android:text="@string/back_button"
        android:onClick="onBackButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/button10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/apply_button"
        android:onClick="onApplyButtonClick"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/button9" />

</androidx.constraintlayout.widget.ConstraintLayout>